@@ -1,3 +1,10 @@
+xboxdrv 0.4.13 - (13/Mai/2010)
+==============================
+
+* added --mimic-xpad
+* added --no-extra-devices
+
+
 xboxdrv 0.4.12 - (08/Mai/2010)
 ==============================
 
